---------------------------------------------------------------------------------------------------
Version: 0.1.6
  Changes:
    - Remove "return results starting at" for return disassembly when there are no return values
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2023-10-03
  Bugfixes:
    - Fix error when the optional '--ignore' argument was not specified
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2023-02-10
  Minor Features:
    - Add `--version` argument
    - Add a human readable header stating the Phobos version in output files with `--use-load`
    - Add `--custom-header` to include a little extra description in the header mentioned above
    - Support files with a shebang
    - Handle invalid nodes in the formatter
    - Implement parsing and compiling as 32 bit signed integer numbers instead of doubles
  Changes:
    - Change output of `--use-load` making it 40-50% smaller, a little bit bigger than raw bytecode
    - Cleanup, improve and update the README and add a docs folder
    - Emit null strings in bytecode wherever null is valid instead of falling back to ""
    - Replace `stat_elem` internally everywhere by using intrusive linked lists
    - Parse malformed numbers just like Lua parses them resulting in more useful syntax errors
  Bugfixes:
    - Fix 'lua.exe' not finding 'lua52.dll' because it was called 'lua.dll'
    - Fix `(foo())` being a valid statement
    - Fix strings in invalid contexts generating invalid AstTokenNodes or failing assertions
    - Fix the local variable for 'fornum' being in the parent scope in the AST
    - Fix unterminated block strings with leading newlines missing said newline in the invalid node
    - Fix unterminated block comments not emitting invalid nodes, so no syntax errors